--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://addod19.github.io/coconut_master/",
   "name": "coconut_master",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "carbon-components": "^10.14.0",
     "carbon-components-react": "^7.14.0",
     "carbon-icons": "^7.0.7",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -20,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
